fix: remove search button on mobile
It just hides it / removes click event. It was easier to leave it in the DOM because without it, the T logo is off center. 🥴

--- a/apps/site/assets/css/export-headerfooter.scss
+++ b/apps/site/assets/css/export-headerfooter.scss
@@ -1,7 +1,7 @@
 // slight rewrite from core.scss.
 // we overwrite .no-js with .js class on mbta.com
 // but outside mbta.com we can just add .js class
-.hidden-no-js {
+:not(.js) .hidden-no-js {
   display: none;
 }
 
